# coodles

./: .gitignore  LICENSE  README.md  pyproject.toml
coodles/: __init__.py  __main__.py  generate_coodles_list.py  get_channel_metadata.py  get_elements_data.py  get_video_segments.py  utils.py
data/: channel_metadata_UCu6mSoMNzHQiBIOCkHUa2Aw.json  channel_metadata_processed_UCu6mSoMNzHQiBIOCkHUa2Aw.json  channel_videos_elements_UCu6mSoMNzHQiBIOCkHUa2Aw.json  coodles.json  coodles_videos.json
